k8s/go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  type: ClusterIP
  selector:
    app: go-service
  ports:
    - port: 80
      targetPort: 8000
