k8s/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: ClusterIP
  selector:
    app: node-service
  ports:
    - port: 80
      targetPort: 3000
