k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
spec:
  rules:
    - host: node.127.0.0.1.xip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-service
                port:
                  number: 80
    - host: go.127.0.0.1.xip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-service
                port:
                  number: 80
